[package]
name = "husky"
authors = ["Mateus Vitor <mateusv251@gmail.com>"]
description = "Library for creating databases like iterators"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["database", "embedded", "key-value"]

[dependencies]
sled = "0.34.7"
rkyv = { version = "0.7.37", features = ["validation","archive_be"], optional = true }
bytecheck = { version = "0.6.7", optional = true }
serde = { version = "1.0.136", optional = true }
bincode = { version = "1.3.3", optional = true }
delegate = "0.6.2"
anyhow = "1.0.57"
parking_lot = "0.12.0"
bus = "2.2.3"
bit-vec = "0.6.3"

[features]
default = ["rkyv", "bytecheck"]
serde = ["dep:serde", "bincode"]